<resources>
    <string name="app_name">Ojas for TTE</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>

    <string name="comprt1">Compartment 1</string>
    <string name="comprt2">Compartment 2</string>
    <string name="comprt3">Compartment 3</string>
    <string name="comprt4">Compartment 4</string>
    <string name="comprt5">Compartment 5</string>
    <string name="comprt6">Compartment 6</string>
    <string name="comprt7">Compartment 7</string>
    <string name="comprt8">Compartment 8</string>
    <string name="comprt9">Compartment 9</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="save">save</string>
    <string name="title_activity_spinner">Spinner</string>
    <string-array name="Coaches">
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>

    </string-array>

</resources>
